complete single currency details page

--- a/public/views/stats.html
+++ b/public/views/stats.html
@@ -1,23 +1,43 @@
 <div class="jumbotron text-center">
-	<h1>Weekly and Monthly late counts</h1>
+	<h1>Historical and Current data</h1>
 	<br />
 	<br />
-	<p class="text-right">
-		Number of days recorded: {{noOfDays || 0}} <br/>
-		Late count: {{lateCount || 0}}
-	</p>
+	<br />
+	{{statsLoadText}}
+	<br/>
+	<br />
+	{{myCurrency}}
+	<br />
+	
+	<table style="width:50%">
+		<tr align="left">
+			<th>Date</th>
+			<th>Transaction Volume</th> 
+			<th>Price (USD)</th>
+		</tr>
+		<tr ng-repeat="name in oldData" align="left">
+			<td>{{name.date}}</td>
+			<td>{{name['txVolume(USD)']}}</td>
+			<td>{{name['price(USD)']}}</td>
+		</tr>
+	</table>
+
+	<table style="width:50%">
+		<tr align="left">
+			<th>Timestamp</th>
+			<th>Price (USD)</th>
+			<th>Volume</th>
+			<th>Market Capital (USD)</th>
+		</tr>
+		<tr ng-repeat="name in dayData" align="left">
+			<td>{{name.timeStamp}}</td>
+			<td>{{name.price}}</td>
+			<td>{{name.volume}}</td>
+			<td>{{name.marketCapital}}</td>
+		</tr>
+	</table>
+
 	<br />
 	<br />
-	<ol class="text-left">
-		<li ng-repeat="name in names"> {{name}} &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-			<button ng-click="weekLateCount(name._id)" >get last week late counts</button> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-			<button ng-click="monthLateCount(name._id)" >get last month late counts</button>
-		</li>
-		
-		<br />
-	</ol>
-	<br />
-	<br />
-	<p class="text-right"><small>Month is taken by default to be of 30 days.</small></p>
 	<p>{{ tagline }}</p>
 </div>
