--- a/public/views/user.html
+++ b/public/views/user.html
@@ -14,6 +14,7 @@
 			<th>Volume</th>
 			<th>Market Capital</th>
 			<th>Last Refreshed (UTC)</th>
+			<th>Details</th>
 		</tr>
 		<tr ng-repeat="name in names" align="left">
 			<td>{{name.currencyName}}</td>
@@ -22,21 +23,12 @@
 			<td>{{name.volume}}</td>
 			<td>{{name.marketCapital}}</td>
 			<td>{{name.lastRefreshed}}</td>
+			<td> <button ng-click="redirect(name.currencyCode)"> Click </button></td>
+			<!-- <td> <a href="/stats" >Get more details</a></td> -->
 		</tr>
 	</table>
-	<!-- <button ng-click="deleteUser(name._id)" >Delete me</button> -->
-	<!-- <ol class="text-left">
-		<li ng-repeat="name in names"> {{name}} &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-
-			
-		</li>
-		
-		<br />
-	</ol> -->
 	<br />
 	<br />
-
-	<!-- <input class="form-control" ng-model="user.name">  <button ng-click="addUser()" >Add a user</button> -->
 	<br />
 	<br />
 	<p>{{ tagline }}</p>
