--- a/public/views/user.html
+++ b/public/views/user.html
@@ -23,7 +23,7 @@
 			<td>{{name.volume}}</td>
 			<td>{{name.marketCapital}}</td>
 			<td>{{name.lastRefreshed}}</td>
-			<td> <button ng-click="redirect(name.currencyCode)"> Click </button></td>
+			<td> <button ng-click="redirect(name.currencyCode)"> Get Data </button></td>
 			<!-- <td> <a href="/stats" >Get more details</a></td> -->
 		</tr>
 	</table>
